--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         }
         .rijec{
             width: 80vw;
-            font-size: 5vh;
+            font-size: 3vh;
             text-align: center;
+            height: fit-content;
             background-color: #bc7995;
             border-radius: 15px;
             padding: 10px;
@@ -61,30 +62,39 @@
                     break;
                 case "bTc7":
                 console.log("Uspjeh");
+                prikaziRijeci(4);
                     break;
                 case "aIkd":
                 console.log("Uspjeh");
+                prikaziRijeci(7);
                     break;
                 case "TP38":
                 console.log("Uspjeh");
+                prikaziRijeci(10);
                     break;
                 case "Uz0s":
                 console.log("Uspjeh");
+                prikaziRijeci(2);
                     break;
                 case "MTfm":
                 console.log("Uspjeh");
+                prikaziRijeci(5);
                     break;
                 case "OKpB":
                 console.log("Uspjeh");
+                prikaziRijeci(8);
                     break;     
                 case "zcgy":
                 console.log("Uspjeh");
+                prikaziRijeci(3);
                     break;   
                 case "xNJT":
                 console.log("Uspjeh");
+                prikaziRijeci(6);
                     break;   
                 case "62lx":
                 console.log("Uspjeh");
+                prikaziRijeci(9);
                     break;
                 default:
                     console.log("Greska");
@@ -98,7 +108,35 @@
             var rijeci = [];
             switch(a){
                 case 1:
+                    rijeci = ["Gestikulacija", "Humor"];
+                break;
+                case 2:
+                    rijeci = ["Neverbalna komunikacija", "Samopouzdanje"];
+                break;
+                case 3:
+                    rijeci = ["Steve Jobs", "Demografija"];
+                break;
+                case 4:
+                    rijeci = ["Prvi dojam", "Verbalna komunikacija"];
+                break;
+                case 5:
+                    rijeci = ["Jasnoća", "Povratna informacija/\"feedback\""];
+                break;
+                case 6:
+                    rijeci = ["Pravilo 10 minuta", "Žargon/\"sleng\""];
+                break;
+                case 7:
+                    rijeci = ["Motivacijski govor", "Amigdala"];
+                break;
+                case 8:
+                    rijeci = ["Androklov efekt", "Govor tijela"];
+                break;
+                case 9:
+                    rijeci = ["Antagonist", "\"Rule of threes\""];
+                break;
+                case 10:
                     rijeci = ["Steve Jobs", "iPhone", "iPad"];
+                break;
             }
             
             while(box.firstChild){
