--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             background-color: #bc7995;
             border-radius: 15px;
             padding: 10px;
+            user-select: none;
         }
     </style>
     <script>
